# typedvec

./: .gitignore  .merlin  OMakefile  OMakeroot  README.md  _oasis  dune  setup.ml  typedvec.opam
src/: META  OMakefile  algebra.ml  algebra.mli  algebra_line.ml  algebra_line.mli  algebra_mat.ml  algebra_mat.mli  algebra_types.ml  algebra_vec.ml  algebra_vec.mli  dune  ext.ml  ext_affine.ml  ext_affine.mli  ext_quaternion.ml  ext_quaternion.mli  matrix.ml  matrix.mli  matrix_intf.ml  size.ml  size.mli  std.ml  typedvec.ml  util.ml  vec.ml  vec.mli  vector.ml  vector.mli  vector_intf.ml
src/ppx/: .gitignore  OMakefile  ast_util.ml  dune  main.ml
test/: OMakefile  dune  test_affine.ml  test_algebra.ml  test_line.ml  test_matrix.ml  test_ppx.ml  test_quaternion.ml  test_size.ml  test_util.ml  test_vec.ml  test_vector.ml  typedvec_test.ml
